[package]
name = "rusic"
description = "A sic IRC wrapper. You need your own version of sic. Mine modified is at https://github.com/luciusmagn/sic"
license = "Fair"
version = "0.0.5"
authors = ["Lukáš Hozda <luk.hozda@gmail.com>"]

[dependencies]
termion = "1.5.1"
rusting = "0.2.0"
async_command = "0.2.0"
